# keryx

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  research.md
.agent/: README.md
.agent/SOP/: publish_releases.md
.agent/briefs/: BRIEF-keryx-release-notes-2025-01-25.md  BRIEF-keryx-ship-2026-02-03.md  BRIEF-llm-providers-codex-fallback-2026-01-29.md  push-command.md
.agent/specs/: SPEC-keryx-release-notes-2025-01-25.md  SPEC-keryx-ship-2026-02-03.md  SPEC-llm-providers-codex-fallback-2026-01-29.md  push-command.md
.claude/agents/: best-practices-researcher.md  build-verifier.md  implementation-planner.md  issue-validator.md  linear-status-updater.md  local-status-updater.md
.claude/commands/: create-issue.md  init-issue-tracker.md  list-issues.md  solve-issue.md  vctk-feature-brief.md  vctk-implement-feature.md  vctk-init-session.md  vctk-init.md  vctk-review-code.md  vctk-save-session.md  vctk-sync-docs.md  vctk-technical-spec.md  vctk-update.md
.github/workflows/: ci.yml  security-audit.yml
.issues/: README.md  config.json
.issues/backlog/: KRX-017.md  KRX-018.md  KRX-019.md  KRX-020.md
.issues/done/: KRX-001.md  KRX-002.md  KRX-003.md  KRX-004.md  KRX-005.md  KRX-006.md  KRX-007.md  KRX-008.md  KRX-009.md  KRX-010.md  KRX-011.md  KRX-012.md  KRX-013.md  KRX-014.md  KRX-015.md  KRX-016.md  KRX-017.md  KRX-018.md  KRX-019.md  KRX-020.md  KRX-021.md  KRX-022.md  KRX-023.md  KRX-024.md  KRX-025.md  KRX-026.md  KRX-027.md  KRX-028.md  KRX-029.md  KRX-030.md  KRX-031.md  KRX-032.md  KRX-033.md  KRX-034.md  KRX-035.md  KRX-036.md  KRX-037.md  KRX-038.md  KRX-039.md  KRX-040.md  (+58 more)
.issues/in-review/: KRX-001.md  KRX-002.md  KRX-003.md  KRX-004.md  KRX-005.md  KRX-006.md  KRX-007.md  KRX-008.md  KRX-009.md  KRX-010.md  KRX-011.md  KRX-012.md  KRX-013.md  KRX-014.md  KRX-015.md  KRX-016.md  KRX-021.md  KRX-022.md  KRX-023.md  KRX-024.md  KRX-025.md  KRX-026.md  KRX-027.md  KRX-028.md  KRX-029.md  KRX-030.md  KRX-031.md  KRX-032.md  KRX-033.md  KRX-034.md  KRX-035.md  KRX-036.md  KRX-037.md  KRX-038.md  KRX-039.md  KRX-040.md  KRX-041.md  KRX-042.md  KRX-043.md  (+3 more)
src/: error.rs  lib.rs  main.rs
tests/: changelog_test.rs  check_ripgrep_test.rs  claude_integration_test.rs  commit_parsing_test.rs  fetch_commits_test.rs  github_prs_test.rs  range_test.rs  response_parsing_test.rs  ship_preflight_test.rs  verification_integration_test.rs  verification_rg_error_test.rs  version_test.rs
(+68 files in other folders)
