[package]
name = "keryx"
version = "0.2.0"
edition = "2024"
description = "A CLI tool that generates release notes from merged PRs and conventional commits"
license = "MIT"
repository = "https://github.com/jacksnxly/keryx"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Async traits (needed for mockable executor trait)
async-trait = "0.1"

# Git
git2 = "0.19"

# GitHub
octocrab = "0.41"

# Changelog
parse-changelog = "0.6"

# Versioning
semver = { version = "1", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Regex for conventional commit parsing
regex-lite = "0.1"

# Cross-platform executable detection
which = "7"

# Logging/tracing for background tasks
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Self-update support (integrates with cargo-dist)
axoupdater = { version = "0.9", default-features = false, features = ["github_releases", "blocking"] }

# Atomic file writes
tempfile = "3"

[features]
rg-tests = []  # Enable integration tests that require ripgrep (rg) in PATH

[dev-dependencies]
wiremock = "0.6"
temp-env = "0.3"
mockall = "0.13"
tokio-test = "0.4"
serial_test = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
